# TensionCPU

./: .gitignore  README.md
EquinoxLogger/: Logger-Time.cpp
TensionCPU/: CMakeLists.txt  TODO.txt
TensionCPU/Source/: Cmd-Args-Parser.cpp  Cmd-Args-Parser.h  Cmd-Arguments.cpp  Cmd-Arguments.h  Cpu-Benchmark.cpp  Cpu-Benchmark.h  Cpu-Benchmarker.cpp  Cpu-Benchmarker.h  Cpu-Load-Generator-Shared-Data.h  Cpu-Load-Generator.cpp  Cpu-Load-Generator.h  Cpu-Speed-Detector.cpp  Cpu-Speed-Detector.h  ICmd-Args-Parser.h  ICmd-Arguments.h  ICpu-Benchmark.h  ICpu-Benchmarker.h  ICpu-Load-Generator.h  ICpu-Speed-Detector.h  ILoad-Generator-Work-Control.h  IProcess-Scheduler.h  ITension-Cpu.h  ITimer.h  IUnit-Cpu-Load-Producer.h  IVariables-For-Cpu-Load-Generator.h  IVariables-For-Cpu-Speed-Detector.h  Load-Generator-Work-Control.cpp  Load-Generator-Work-Control.h  Process-Scheduler.cpp  Process-Scheduler.h  Scheduling-Policy-Type.h  Tension-Cpu.cpp  Tension-Cpu.h  Timer.cpp  Timer.h  Unit-Cpu-Load-Producer.cpp  Unit-Cpu-Load-Producer.h  Variables-For-Cpu-Benchmarker.h  Variables-For-Cpu-Load-Generator.cpp  Variables-For-Cpu-Load-Generator.h  (+2 more)
TensionCPU/Source/EquinoxLogger/: Console-Logger.cpp  Console-Logger.h  File-Logger.cpp  File-Logger.h  IConsole-Logger.h  IFile-Logger.h  ILogger-Level.h  ILogger-Output.h  ILogger.h  ILogs-File-Access-Guard.h  Log-Level-Type.h  Logger-Level.cpp  Logger-Level.h  Logger-Output.cpp  Logger-Output.h  Logger.cpp  Logger.h  Logs-File-Access-Guard.cpp  Logs-File-Access-Guard.h
TensionCPU/Source/Logger/: Console-Logger.cpp  Console-Logger.h  File-Logger.cpp  File-Logger.h  IConsole-Logger.h  IFile-Logger.h  ILogger-Level.h  ILogger-Output.h  ILogger.h  ILogs-File-Access-Guard.h  Log-Level-Type.h  Log-Output-Type.h  Logger-Level.cpp  Logger-Level.h  Logger-Output.cpp  Logger-Output.h  Logger.cpp  Logger.h  Logs-File-Access-Guard.cpp  Logs-File-Access-Guard.h
TensionCPU/include/: CmdArgumentsParser.h  IParsedCmdArguments.h  ParsedCmdArguments.h  TensionCPU.h
TensionCPU/include/CmdArgumentsParser/: CmdArgumentsParser.h  CmdArgumentsParserLogic.h  DebugModeType.h  ICmdArgumentsParserLogic.h  IParameterValidator.h  IParsedCmdArguments.h  ParameterValidator.h  ParsedCmdArguments.h  ParsedCmdArgumentsLogic.h  SchedulingModeType.h
TensionCPU/src/: ParsedCmdArguments.cpp  TensionCPU.cpp  main.cpp
TensionCPU/src/CmdArgumentsParser/: CmdArgumentsParser.cpp  CmdArgumentsParserLogic.cpp  ParameterValidator.cpp  ParsedCmdArguments.cpp  ParsedCmdArgumentsLogic.cpp
TensionCPU/tests/: CMakeLists.txt  Tests.cpp
TensionCPU/tests/src/: ParsedCmdArgumentsLogicTest.cpp
UnitTests/Source/: Logger-Test_Set-Logging-Level-Tests.cpp  Logger-Test_Set-Logging-Output-Tests.cpp  Logger-Tests.cpp  Main-Tests-Run.cpp
UnitTests/Source/EquinoxLoggerTests/: Console-Logger-Tests.cpp  File-Logger-Tests.cpp  Logger-Enable-Log-Levels-Macros-Tests.cpp  Logger-Level-Tests.cpp  Logger-Log-Message-Macros-Tests.cpp  Logger-Macros-Tests.cpp  Logger-Output-Tests.cpp  Logs-File-Access-Guard-Tests.cpp
UnitTests/Source/LoggerTests/: Logger-Level-Tests.cpp  Logger-Test_Set-Logging-Level-Tests.cpp  Logger-Test_Set-Logging-Output-Tests.cpp
UnitTests/Source/Mocks/: Cpu-Benchmarker-Mock.h  Cpu-Speed-Detector-Mock.h  Variables-For-Cpu-Load-Generator-Mock.h  Variables-For-Cpu-Speed-Detector-Mock.h
UnitTests/Source/TensionCpuTests/: Cmd-Args-Parser-Tests.cpp  Cpu-Benchmarker-Tests.cpp  Cpu-Load-Generator-Tests-With-Mock.cpp  Cpu-Speed-Detector-Tests-With-Mock.cpp  Cpu-Speed-Detector-Tests.cpp  Tension-Cpu-Tests.cpp  TensionCpuTests.cpp  TimerTests.cpp
